@@ -63,7 +63,7 @@ our @EXPORT_OK = qw(
                      factor
                      divisors
                      sigma
-                     chinese
+                     chinese chinese2
                      moebius
                      prime_count prime_count_lower prime_count_upper
                      primorial
@@ -1211,12 +1211,21 @@ C<bezout> in Pari 2.6.  The results will hence match L<Math::Pari/bezout>.
 
 Solves a system of simultaneous congruences using the Chinese Remainder
 Theorem (with extension to non-coprime moduli).  A list of C<[a,n]> pairs
-are taken as input, each representing an equation C<x ≡ a mod n>.  If no
+are taken as input, each representing an equation C<x ≡ a mod |n|>.  If no
 solution exists, C<undef> is returned.  If a solution is returned, the
 modulus is equal to the lcm of all the given moduli (see L</lcm>.  In
 the standard case where all values of C<n> are coprime, this is just the
-product.  The C<n> values must be positive integers, while the C<a> values
+product.  The C<n> values must be non-zero integers, while the C<a> values
 are integers.
+
+=head2 chinese2
+
+Functions like L</chinese> but returns two items: the remainder and the
+modulus.
+If a solution exists, the second value (the final modulus) is equal to
+the lcm of all the absolute values of all the given moduli.
+
+If no solution exists, both return values will be C<undef>.
 
 =head2 vecsum
 
@@ -1293,7 +1302,7 @@ Returns C<n^x> for the inputs C<n> and C<x>.
 An optional third argument indicates the number of significant digits
 (default 40) with the result rounded.
 
-Like L<logreal> and L<expreal>, this is a basic math function that is
+Like L</logreal> and L</expreal>, this is a basic math function that is
 not available from the GMP library but implemented in MPFR.  Since the
 latter is not always available, this can be useful to have.
 
