@@ -6,7 +6,7 @@ use Test::More;
 use Math::Prime::Util::GMP qw/moebius liouville totient jordan_totient
                               exp_mangoldt carmichael_lambda
                               znorder znprimroot is_primitive_root
-                              chinese ramanujan_tau/;
+                              chinese chinese2 ramanujan_tau/;
 my $extra = defined $ENV{EXTENDED_TESTING} && $ENV{EXTENDED_TESTING};
 
 my @moeb_vals = (qw/ 1 -1 -1 0 -1 1 -1 0 0 1 -1 0 -1 1 1 0 -1 0 -1 0 /);
@@ -143,40 +143,54 @@ $rtau{123456} = "206775765874925539386458112" if $extra;
 $rtau{982348} = "598906847188833667374229665444608" if $extra;
 
 my @crts = (
-  [ [], 0 ],
-  [ [[4,5]], 4 ],
-  [ [[77,11]], 0 ],
-  [ [[0,5],[0,6]], 0 ],
-  [ [[14,5],[0,6]], 24 ],
-  [ [[10,11],[4,22],[9,19]], undef ],
-  [ [[77,13],[79,17]], 181 ],
-  [ [[2,3],[3,5],[2,7]], 23 ],
-  [ [[10,11],[4,12],[12,13]], 1000 ],
-  [ [[42,127],[24,128]], 2328 ],             # Some tests from Mod::Int
-  [ [[32,126],[23,129]], 410 ],
-  [ [[2328,16256],[410,5418]], 28450328 ],
-  [ [[1,10],[11,100]], 11 ],
-  [ [[11,100],[22,100]], undef ],
-  [ [[1753051086,3243410059],[2609156951,2439462460]], "6553408220202087311"],
+  [ [], 0, 0 ],
+  [ [[4,5]], 4, 5 ],
+  [ [[77,11]], 0, 11 ],
+  [ [[0,5],[0,6]], 0, 30 ],
+  [ [[14,5],[0,6]], 24, 30 ],
+  [ [[10,11],[4,22],[9,19]], undef, undef ],
+  [ [[77,13],[79,17]], 181, 221 ],
+  [ [[2,3],[3,5],[2,7]], 23, 105 ],
+  [ [[10,11],[4,12],[12,13]], 1000, 1716 ],
+  [ [[42,127],[24,128]], 2328, 16256 ],             # Some tests from Mod::Int
+  [ [[32,126],[23,129]], 410, 5418 ],
+  [ [[2328,16256],[410,5418]], 28450328, 44037504 ],
+  [ [[1,10],[11,100]], 11, 100 ],
+  [ [[11,100],[22,100]], undef, undef ],
+  [ [[1753051086,3243410059],[2609156951,2439462460]],
+    "6553408220202087311", "7912177081316885140"],
   [ [ ["6325451203932218304","2750166238021308"],
       ["5611464489438299732","94116455416164094"] ],
-    "1433171050835863115088946517796" ],
+    "1433171050835863115088946517796","129417949063886082109332998257476" ],
   [ [ ["1762568892212871168","8554171181844660224"],
       ["2462425671659520000","2016911328009584640"] ],
-    "188079320578009823963731127992320" ],
+    "188079320578009823963731127992320","263259960302667721456496781557760" ],
   [ [ ["856686401696104448","11943471150311931904"],
       ["6316031051955372032","13290002569363587072"] ],
-    "943247297188055114646647659888640" ],
-  [ [[-3105579549,3743000622],[-1097075646,1219365911]], "2754322117681955433"],
+    "943247297188055114646647659888640","1211004350851176848301478947323904" ],
+  [ [[-3105579549,3743000622],[-1097075646,1219365911]],
+    "2754322117681955433", "4564087363318596642"],
   [ [ ["-925543788386357567","243569243147991"],
       ["-1256802905822510829","28763455974459440"] ],
-    "837055903505897549759994093811" ],
+    "837055903505897549759994093811", "7005893202019645748120146985040" ],
   [ [ ["-2155972909982577461","8509855219791386062"],
       ["-5396280069505638574","6935743629860450393"] ],
-    "12941173114744545542549046204020289525" ],
-  [ [[3,5],[2,0]], undef ],       # three tests that we handle zeros.
-  [ [[3,0],[2,3]], undef ],
-  [ [[3,5],[3,0],[2,3]], undef ],
+    "12941173114744545542549046204020289525","59022174131702808856838498513062622366" ],
+  [ [[3,5],[2,0]], undef, undef ],       # three tests that we handle zeros.
+  [ [[3,0],[2,3]], undef, undef ],
+  [ [[3,5],[3,0],[2,3]], undef, undef ],
+  [ [[5,0],[15,1]], undef, undef ],      # two more test for zeros
+  [ [[15,1],[5,0]], undef, undef ],
+  # Tests to make IV_MAX < lcm < UV_MAX
+  [ [[14,44381], [87,48473], [19,59467], [74,118751]],
+    "6441035217555187414", "15191836855823857721"],
+  [ [[2,181], [3,193], [5,227], [30,383]], 2205672518, 3037109953],
+  # Negative modulos
+  [ [[14,-5], [ 17, -6]], 29, 30],
+  [ [[14, 5], [ 17, -6]], 29, 30],
+  [ [[-4,17], [-17, 19]], 268, 323],
+  [ [[-4,17], [-17, 19]], 268, 323],
+  [ [[-4,17], [ 17,-19]], 302, 323],
 );
 
 
@@ -191,7 +205,7 @@ plan tests => 1
             + scalar(keys %primroots) + 1
             + 3 # is_primitive_root
             + scalar(keys %rtau)
-            + 1 + scalar(@crts)
+            + 3     # chinese, chinese2
             + 10;
 
 
@@ -273,11 +287,16 @@ while (my($n, $tau) = each (%rtau)) {
 }
 
 ###### chinese
-foreach my $carg (@crts) {
-  my($aref, $exp) = @$carg;
-  my $crt = chinese(@$aref);
-  is( $crt, $exp, "crt(".join(",",map { "[@$_]" } @$aref).") = " . ((defined $exp) ? $exp : "<undef>") );
-}
+is_deeply(
+  [ map { chinese(@{$_->[0]}) } @crts ],
+  [ map { $_->[1] } @crts ],
+  "chinese()"
+);
+is_deeply(
+  [ map { [chinese2(@{$_->[0]})] } @crts ],
+  [ map { [$_->[1],$_->[2]] } @crts ],
+  "chinese2()"
+);
 {
   my @rems = (102,320,954,458,786,192,220,437,726,904,162,27,518,10,138,712,246,213,234,863,1002,361,40,738,566,777,114,255,282,12,612,588,414,159,408,357,474,271,804,555,502,699,764,19,654,342,286,450,550,865,852,291,894,762,118,942,342,334,610,3,702,743,222,165,950,822,736,749,6,173,942,33,326,770,738,27,982,420,12,944,222,173,798,285,458,397,1026,631,118,969,712,641,138,386,836,1062,110,714,942,208,1002,150,190,532,150,1087,334,654,670,99,252,364,558,1020,744,467,366,655,242,714,502,399,1002,1106,146,852,984,12);
   my $crt = chinese( map { [$rems[$_],1000+$_] } 0..127 );
